--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ngrok": "^3.1.1",
     "on-build-webpack": "^0.1.0",
     "pako": "^1.0.10",
+    "portfinder": "^1.0.20",
     "pretty-bytes": "^5.2.0",
     "raw-loader": "^2.0.0",
     "sha1": "^1.1.1",
