--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@digitaloptgroup/cli",
   "description": "Digital Optimization Group Edge Platform Cli",
-  "version": "0.0.1-developer-preview-01",
+  "version": "0.0.1-dev-preview-06",
   "author": "Digital Optimization Group LLC",
   "bin": {
     "dog": "./bin/run"
   },
-  "bugs": "https://github.com/DigitalOptGroup/dogcli/issues",
+  "bugs": "https://github.com/DigitalOptimizationGroup/dogcli/issues",
   "dependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.0.0-beta.51",
@@ -56,6 +56,7 @@
     "webpack": "^4.30.0"
   },
   "devDependencies": {
+    "@digitaloptgroup/types": "0.0.1",
     "@oclif/dev-cli": "^1",
     "@oclif/test": "^1",
     "@oclif/tslint": "^3",
@@ -86,7 +87,7 @@
     "/npm-shrinkwrap.json",
     "/oclif.manifest.json"
   ],
-  "homepage": "https://github.com/DigitalOptGroup/dogcli",
+  "homepage": "https://github.com/DigitalOptimizationGroup/dogcli",
   "keywords": [
     "oclif"
   ],
@@ -104,7 +105,7 @@
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "tslint -p test -t stylish",
-    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
+    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme && mv lib/src/* lib/ && rm -d lib/src && cp -r src/templates lib && cp -r src/scripts lib",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md"
   },
