--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
     "declaration": true,
     "importHelpers": true,
     "module": "commonjs",
-    "outDir": "lib",
-    "rootDir": "src",
+    "outDir": "./lib",
+    "rootDirs": ["./src"],
     "strict": true,
     "target": "es2017",
     "composite": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["./src/**/*"]
 }
