--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chalk": "^2.4.2",
     "cli-color": "^1.4.0",
     "cli-ux": "^5.2.1",
+    "conf": "^4.0.2",
     "configstore": "^4.0.0",
     "css-loader": "^2.1.1",
     "diff": "^4.0.1",
@@ -36,6 +37,7 @@
     "dotenv-webpack": "^1.5.7",
     "eventsource": "^1.0.7",
     "fast-stable-stringify": "^1.0.0",
+    "find-up": "^4.0.0",
     "glob": "^7.1.3",
     "inquirer": "^6.3.1",
     "js-yaml": "^3.13.1",
