add app types and raw script deployment

--- a/package.json
+++ b/package.json
@@ -110,6 +110,9 @@
       "autocomplete": {
         "description": "setup optional autocomplete"
       },
+      "cms": {
+        "description": "work with your CMS"
+      },
       "domains": {
         "description": "manage SSL and domains for your app"
       },
