--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@digitaloptgroup/cli",
   "description": "Digital Optimization Group Edge Platform CLI",
-  "version": "0.0.1-dev-preview-14",
+  "version": "0.0.1-dev-preview-18",
   "author": "Digital Optimization Group LLC",
   "bin": {
     "dog": "./bin/run"
@@ -31,6 +31,7 @@
     "cli-ux": "^5.2.1",
     "conf": "^4.0.2",
     "configstore": "^4.0.0",
+    "cookie": "^0.4.0",
     "css-loader": "^2.1.1",
     "diff": "^4.0.1",
     "dotenv": "^6.1.0",
@@ -51,7 +52,9 @@
     "pako": "^1.0.10",
     "portfinder": "^1.0.20",
     "pretty-bytes": "^5.2.0",
+    "querystring": "^0.2.0",
     "raw-loader": "^2.0.0",
+    "rimraf": "^2.6.3",
     "sha1": "^1.1.1",
     "thenify": "^3.3.0",
     "tslib": "^1",
