use local AWS to deploy lambda & only update color gateway

--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/register": "^7.0.0-beta.51",
     "@dollarshaveclub/cloudworker": "0.0.11",
-    "@oclif/command": "^1.5.12",
+    "@oclif/command": "^1.5.13",
     "@oclif/config": "^1.12.12",
     "@oclif/plugin-autocomplete": "^0.1.0",
     "@oclif/plugin-help": "^2",
     "@types/uuid": "^3.4.4",
+    "aws-sdk": "^2.466.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
