--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "memory-fs": "^0.4.1",
     "mime": "^2.4.2",
     "ngrok": "^3.1.1",
+    "npm-programmatic": "0.0.12",
     "on-build-webpack": "^0.1.0",
     "pako": "^1.0.10",
     "portfinder": "^1.0.20",
