--- a/package.json
+++ b/package.json
@@ -1,32 +1,23 @@
 {
   "name": "@digitaloptgroup/cli",
   "description": "Digital Optimization Group Edge Platform CLI",
-  "version": "0.0.1-dev-preview-19",
+  "version": "0.0.1-dev-preview-30",
   "author": "Digital Optimization Group LLC",
   "bin": {
     "dog": "./bin/run"
   },
   "bugs": "https://github.com/DigitalOptimizationGroup/dogcli/issues",
   "dependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.51",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.51",
-    "@babel/plugin-transform-object-assign": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "@babel/register": "^7.0.0-beta.51",
-    "@dollarshaveclub/cloudworker": "0.0.11",
-    "@oclif/command": "^1.5.13",
+    "@digitaloptgroup/plugin-install-start": "0.0.1-devpreview-01",
+    "@oclif/command": "^1.5.14",
     "@oclif/config": "^1.12.12",
+    "@oclif/errors": "^1.2.2",
     "@oclif/plugin-autocomplete": "^0.1.0",
     "@oclif/plugin-help": "^2",
+    "@oclif/plugin-plugins": "^1.7.8",
+    "@oclif/plugin-warn-if-update-available": "^1.7.0",
     "@types/uuid": "^3.4.4",
-    "aws-sdk": "^2.466.0",
     "axios": "^0.18.0",
-    "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
     "cli-color": "^1.4.0",
     "cli-ux": "^5.2.1",
@@ -34,7 +25,6 @@
     "configstore": "^4.0.0",
     "cookie": "^0.4.0",
     "cross-spawn": "^6.0.5",
-    "css-loader": "^2.1.1",
     "diff": "^4.0.1",
     "dotenv": "^6.1.0",
     "dotenv-webpack": "^1.5.7",
@@ -45,26 +35,32 @@
     "inquirer": "^6.3.1",
     "js-yaml": "^3.13.1",
     "json-diff": "^0.5.4",
-    "localtunnel": "^1.9.1",
     "log-symbols": "^3.0.0",
-    "memory-fs": "^0.4.1",
     "mime": "^2.4.2",
     "ngrok": "^3.1.1",
     "npm-programmatic": "0.0.12",
-    "on-build-webpack": "^0.1.0",
     "pako": "^1.0.10",
     "portfinder": "^1.0.20",
     "pretty-bytes": "^5.2.0",
     "querystring": "^0.2.0",
-    "raw-loader": "^2.0.0",
+    "request": "^2.88.0",
     "rimraf": "^2.6.3",
     "sha1": "^1.1.1",
     "thenify": "^3.3.0",
     "tslib": "^1",
-    "uuid": "^3.3.2",
-    "webpack": "^4.30.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.51",
+    "@babel/plugin-transform-object-assign": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/register": "^7.0.0-beta.51",
     "@digitaloptgroup/types": "0.0.1",
     "@oclif/dev-cli": "^1",
     "@oclif/test": "^1",
@@ -79,13 +75,20 @@
     "@types/node": "^10",
     "@types/pako": "^1.0.1",
     "@types/tar-fs": "^1.16.1",
+    "babel-loader": "^8.0.6",
     "chai": "^4",
     "globby": "^8",
+    "memory-fs": "^0.4.1",
     "mocha": "^5",
     "nyc": "^14.1.0",
+    "on-build-webpack": "^0.1.0",
+    "raw-loader": "^2.0.0",
+    "ts-loader": "^6.0.2",
     "ts-node": "^8",
     "tslint": "^5",
-    "typescript": "^3.3"
+    "typescript": "^3.3",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.4"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -107,8 +110,12 @@
     "bin": "dog",
     "plugins": [
       "@oclif/plugin-help",
-      "@oclif/plugin-autocomplete"
+      "@oclif/plugin-autocomplete",
+      "@oclif/plugin-warn-if-update-available",
+      "@oclif/plugin-plugins",
+      "@digitaloptgroup/plugin-install-start"
     ],
+    "scope": "digitaloptgroup",
     "topics": {
       "apps": {
         "description": "manage your apps"
@@ -137,9 +144,10 @@
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "tslint -p test -t stylish",
-    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme && mv lib/src/* lib/ && rm -d lib/src && cp -r src/templates lib && cp -r src/scripts lib",
+    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme && mv lib/src/* lib/ && rm -d lib/src && cp -r src/templates lib",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md"
+    "version": "oclif-dev readme && git add README.md",
+    "webpack": "webpack"
   },
   "types": "lib/index.d.ts"
 }
